Updated CSS variables. Finally fixed the pesky issue with the socialNav not being visible. Turns out the padding was the wrong variable to change for space between icons. Margin should be used going forward. The padding was so large that the icons were being thrown off screen.

--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -279,6 +279,7 @@ footer {
 
 footer p {
   font-size: 1rem;
+  margin-top: 0.5rem;
   color: var(--bgThree);
 }
 
